@@ -12,6 +12,7 @@ General
 
 Package org.springframework.osgi.compendium
 * fixed OSGi service unregistration of <managed-service/> listeners
+* fixed property injection to occur before the initializing method is invoked for <managed-service-factory/> beans
 
 Package org.springframework.osgi.context
 * improved proxying of classes that are boot delegated outside the OSGi environment
